[package]
name = 'menstrual-subscription'
version = "2.1.1"
repository = ''
edition = '2021'
authors = ['Agustinus Theodorus <agustinustheoo@gmail.com>']
description = ''
homepage = ''
license = 'AGPL-3.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# External Dependencies
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

# Substrate packages
## Substrate Primitive Dependencies
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", optional = true }

## Substrate Frame Dependencies
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }

## Substrate Pallet Dependencies
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
pallet-assets = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.18', default-features = false }

primitives-duration = { path = '../../primitives/duration', default-features = false }
primitives-menstrual-status = { path = '../../primitives/menstrual-status', default-features = false }
primitives-price-and-currency = { path = '../../primitives/price-and-currency', default-features = false }

traits-menstrual-subscription = { path = './traits', default-features = false }

[dev-dependencies]
serde = { default-features = false, version = "1.0.136" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }

[features]
default = ['std']
std = [
    'codec/std',
	'scale-info/std',

    'frame-support/std',
    'frame-system/std',

    'sp-std/std',
    'sp-io/std',
	'sp-runtime/std',

    'pallet-timestamp/std',
	'pallet-balances/std',
	'pallet-assets/std',

    'primitives-duration/std',
    'primitives-menstrual-status/std',
	'primitives-price-and-currency/std',

    'traits-menstrual-subscription/std',
]
runtime-benchmarks = ['frame-benchmarking']
try-runtime = ['frame-support/try-runtime']
