[package]
name = 'opinion-requestor'
version = '1.0.0'
edition = '2021'
homepage = 'https://debio.network/'
repository = 'https://github.com/debionetwork/debio-node'
authors = ['DeBio Dev Team <dev@debio.network>']
description = ''
license = 'AGPL-3.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }

sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }

## Substrate Pallet Dependencies
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }

traits-electronic-medical-record = { path = '../electronic-medical-record/traits', default-features = false }
traits-opinion-requestor = { path = '../opinion-requestor/traits', default-features = false }

[dev-dependencies]
serde = { default-features = false, version = "1.0.136" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }

[features]
default = ['std']
std = [
    'codec/std',
	'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-io/std',

	'traits-electronic-medical-record/std',
	'traits-opinion-requestor/std',

	'pallet-timestamp/std',
]
runtime-benchmarks = []
try-runtime = ['frame-support/try-runtime']
