[package]
name = "orders"
version = "0.1.0"
authors = ["kevin <kevin.janada@gmail.com>"]
edition = "2018"
description = ''
homepage = ''
license = 'AGPL-3.0'
repository = ''

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { default-features = false, version = "1.0.119", features = ["derive"] }
chrono = { default-features = false, version = '0.4' }

frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }

sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }

pallet-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }

services = { path = '../services', default-features = false }

traits-services = { path = '../../traits/services', default-features = false }
traits-genetic-testing = { path = '../../traits/genetic-testing', default-features = false }
traits-user-profile = { path = '../../traits/user-profile', default-features = false }
traits-order = { path = '../../traits/order', default-features = false }

[dev-dependencies]
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }

[features]
default = ['std']
std = [
    'serde/std',
    'codec/std',
	'scale-info/std',
    'chrono/std',

    'frame-support/std',
    'frame-system/std',

    'sp-std/std',
    'sp-io/std',

    'pallet-timestamp/std',

    'services/std',

    'traits-services/std',
    'traits-genetic-testing/std',
    'traits-user-profile/std',
    'traits-order/std',
]
runtime-benchmarks = []
try-runtime = ["frame-support/try-runtime"]
