[package]
name = "orders"
version = "2.1.1"
authors = ["kevin <kevin.janada@gmail.com>"]
edition = '2021'
description = ''
homepage = ''
license = 'AGPL-3.0'
repository = ''

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
serde = { default-features = false, version = "1.0.136", features = ["derive"] }
chrono = { default-features = false, version = '0.4' }

frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }

sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }

traits-services = { path = '../services/traits', default-features = false }
traits-genetic-testing = { path = '../genetic-testing/traits', default-features = false }
traits-user-profile = { path = '../user-profile/traits', default-features = false }
traits-order = { path = './traits', default-features = false }

## Substrate Pallet Dependencies
pallet-assets = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.18', default-features = false }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
pallet-randomness-collective-flip = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }

# Local Dependencies
services = { path = '../services', default-features = false }
certifications = { path = '../certifications', default-features = false }
user-profile = { path = '../user-profile', default-features = false }
labs = { path = '../labs', default-features = false }
genetic-testing = { path = '../genetic-testing', default-features = false }

primitives-duration = { path = '../../primitives/duration', default-features = false }
primitives-area-code = { path = '../../primitives/area-code', default-features = false }
primitives-profile-roles = { path = '../../primitives/profile-roles', default-features = false }
primitives-price-and-currency = { path = '../../primitives/price-and-currency', default-features = false }

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }

[features]
default = ['std']
std = [
    'serde/std',
    'codec/std',
	'scale-info/std',
    'chrono/std',

    'frame-support/std',
    'frame-system/std',

    'sp-std/std',
    'sp-io/std',

    'pallet-timestamp/std',
	'pallet-randomness-collective-flip/std',
	'pallet-balances/std',
	'pallet-assets/std',

    'services/std',
	'certifications/std',
	'user-profile/std',
	'labs/std',
	'genetic-testing/std',

    'traits-services/std',
    'traits-genetic-testing/std',
    'traits-user-profile/std',
    'traits-order/std',

    'primitives-duration/std',
    'primitives-area-code/std',
    'primitives-profile-roles/std',
    'primitives-price-and-currency/std',
]
runtime-benchmarks = []
try-runtime = ["frame-support/try-runtime"]
