[package]
name = 'rewards'
version = '0.1.0'
edition = '2018'
license = 'AGPL-3.0'
authors = ['Debio Dev Team <https://github/debionetwork>']
description = 'rewards pallet'
homepage = 'https://debio.network'
repository = 'https://github.com/debionetwork/debio-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# External Dependencies
hex-literal = '0.3.3'
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive'] }
scale-info = { version = '1.0', default-features = false, features = ['derive'] }

# Substrate packages
## Substrate Primitive Dependencies
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }

## Substrate Frame Dependencies
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false, optional = true }

## Substrate Pallet Dependencies
pallet-balances = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }

[dev-dependencies]
serde = { default-features = false, version = "1.0.119" }

[features]
default = ['std']
std = [
    'codec/std',
	'scale-info/std',

	'sp-runtime/std',
	'sp-std/std',
    'sp-io/std',
	'frame-support/std',
	'frame-system/std',

	'pallet-balances/std',
]
runtime-benchmarks = ['frame-benchmarking']
try-runtime = ['frame-support/try-runtime']
