[package]
name = 'rewards'
version = '2.1.0'
edition = '2021'
license = 'AGPL-3.0'
authors = ['Debio Dev Team <https://github/debionetwork>']
description = 'rewards pallet'
homepage = 'https://debio.network'
repository = 'https://github.com/debionetwork/debio-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# External Dependencies
hex-literal = '0.3.3'
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

# Substrate packages
## Substrate Primitive Dependencies
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }

## Substrate Frame Dependencies
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", optional = true }

## Substrate Pallet Dependencies
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }

[dev-dependencies]
serde = { default-features = false, version = "1.0.136" }

[features]
default = ['std']
std = [
    'codec/std',
	'scale-info/std',

	'sp-runtime/std',
	'sp-std/std',
    'sp-io/std',
	'frame-support/std',
	'frame-system/std',

	'pallet-balances/std',
]
runtime-benchmarks = ['frame-benchmarking']
try-runtime = ['frame-support/try-runtime']
