[package]
name = 'rewards'
version = '2.1.0'
edition = '2021'
license = 'AGPL-3.0'
authors = ['Debio Dev Team <https://github/debionetwork>']
description = 'rewards pallet'
homepage = 'https://debio.network'
repository = 'https://github.com/debionetwork/debio-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# External Dependencies
hex-literal = '0.3.4'
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

# Substrate packages
## Substrate Primitive Dependencies
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }

## Substrate Frame Dependencies
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30", optional = true }

## Substrate Pallet Dependencies
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }

[dev-dependencies]
serde = { default-features = false, version = "1.0.136" }

[features]
default = ['std']
std = [
    'codec/std',
	'scale-info/std',

	'sp-runtime/std',
	'sp-std/std',
    'sp-io/std',
	'frame-support/std',
	'frame-system/std',

	'pallet-balances/std',
]
runtime-benchmarks = ['frame-benchmarking']
try-runtime = ['frame-support/try-runtime']
