[package]
name = 'service-request'
version = '2.0.1'
edition = '2021'
license = 'AGPL-3.0'
authors = ['DeBio Dev Team <debio_dev@blocksphere.id>']
homepage = 'https://debio.network/'
repository = 'https://github.com/debionetwork/debio-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# External Dependencies
hex-literal = '0.3.3'
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive'] }
scale-info = { version = '1.0', default-features = false, features = ['derive'] }

# Substrate packages
## Substrate Primitive Dependencies
sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }

## Substrate Frame Dependencies
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false, optional = true }

## Substrate Pallet Dependencies
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }

# Local Dependencies
labs = { path = '../labs', default-features = false }
orders = { path = '../orders', default-features = false }
services = { path = '../services', default-features = false }
user-profile = { path = '../user-profile', default-features = false }
certifications = { path = '../certifications', default-features = false }
genetic-testing = { path = '../genetic-testing', default-features = false }

traits-labs = { path = '../labs/traits', default-features = false }

primitives-verification-status = { path = '../../primitives/verification-status', default-features = false }
primitives-area-code = { path = '../../primitives/area-code', default-features = false }

[dev-dependencies]
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
	'scale-info/std',

	'sp-std/std',
	'sp-core/std',
	'sp-io/std',
	'sp-runtime/std',

    'frame-support/std',
    'frame-system/std',

	'primitives-area-code/std',

    'pallet-timestamp/std',
	'pallet-randomness-collective-flip/std',
	'pallet-balances/std',

	'labs/std',
    'orders/std',
    'services/std',
	'certifications/std',
	'user-profile/std',
	'genetic-testing/std',
]
runtime-benchmarks = ['frame-benchmarking']
try-runtime = ['frame-support/try-runtime']
