[package]
name = 'service-request'
version = '2.1.0'
edition = '2021'
license = 'AGPL-3.0'
authors = ['DeBio Dev Team <debio_dev@blocksphere.id>']
homepage = 'https://debio.network/'
repository = 'https://github.com/debionetwork/debio-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# External Dependencies
hex-literal = '0.3.3'
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive'] }
scale-info = { version = '1.0', default-features = false, features = ['derive'] }

# Substrate packages
## Substrate Primitive Dependencies
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }

## Substrate Frame Dependencies
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", optional = true }

## Substrate Pallet Dependencies
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
pallet-randomness-collective-flip = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }

# Local Dependencies
labs = { path = '../labs', default-features = false }
orders = { path = '../orders', default-features = false }
services = { path = '../services', default-features = false }
user-profile = { path = '../user-profile', default-features = false }
certifications = { path = '../certifications', default-features = false }
genetic-testing = { path = '../genetic-testing', default-features = false }

traits-labs = { path = '../labs/traits', default-features = false }

primitives-verification-status = { path = '../../primitives/verification-status', default-features = false }
primitives-area-code = { path = '../../primitives/area-code', default-features = false }

[dev-dependencies]
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }

[features]
default = ['std']
std = [
    'codec/std',
	'scale-info/std',

	'sp-std/std',
	'sp-core/std',
	'sp-io/std',
	'sp-runtime/std',

    'frame-support/std',
    'frame-system/std',

	'primitives-area-code/std',

    'pallet-timestamp/std',
	'pallet-randomness-collective-flip/std',
	'pallet-balances/std',

	'labs/std',
    'orders/std',
    'services/std',
	'certifications/std',
	'user-profile/std',
	'genetic-testing/std',
]
runtime-benchmarks = ['frame-benchmarking']
try-runtime = ['frame-support/try-runtime']
