[package]
name = 'services'
version = '2.1.0'
authors = ['kevin <kevin.janada@gmail.com>']
edition = '2021'
description = ''
homepage = ''
license = 'AGPL-3.0'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ['derive'] }
scale-info = { version = '2.0.1', default-features = false, features = ['derive'] }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28' }
sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28' }

traits-services = { path = './traits', default-features = false }

primitives-duration = { path = '../../primitives/duration', default-features = false }
primitives-price-and-currency = { path = '../../primitives/price-and-currency', default-features = false }

[dev-dependencies]
serde = { default-features = false, version = '1.0.136' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28' }

[features]
default = ['std']
std = [
    'codec/std',
	'scale-info/std',
    'sp-std/std',
    'sp-io/std',
    'frame-support/std',
    'frame-system/std',
    'traits-services/std',
    'primitives-duration/std',
    'primitives-price-and-currency/std',
]
runtime-benchmarks = []
try-runtime = ['frame-support/try-runtime']
