[package]
name = "user-profile"
version = "2.1.0"
authors = ["Kevin <kevin.janada@gmail.com>"]
edition = '2021'
license = 'AGPL-3.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
serde = { default-features = false, version = "1.0.136", features = ["derive"] }
rustc-hex = { version = "2.1.0", default-features = false }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", optional = true }
traits-user-profile = { path = './traits', default-features = false }

# Local Primitives
primitives-profile-roles = { path = '../../primitives/profile-roles', default-features = false }
primitives-ethereum-address = { path = '../../primitives/ethereum-address', default-features = false }

[dev-dependencies]
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

[features]
default = ['std']
std = [
    'codec/std',
	'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-io/std',
    'serde/std',
    'rustc-hex/std',
    'traits-user-profile/std',

    # Local Primitives
    'primitives-profile-roles/std',
    'primitives-ethereum-address/std',
]
runtime-benchmarks = [
	'frame-benchmarking'
]
