[package]
name = "primitives-duration"
version = "2.0.1"
authors = ["Agustinus Theodorus <agustinustheoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }

[features]
default = ['std']
std = [
  'scale-info/std',
  'frame-support/std',
]

